--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,10 @@
               "buildTarget": "gestionnaire-collection-tcg-ui:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+              "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "test": {
           "builder": "@angular/build:unit-test"
