--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@angular/material": "^20.0.5",
+    "chart.js": "^4.5.1",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
