--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:clean": "rm -rf .angular/cache && ng serve"
   },
   "prettier": {
     "printWidth": 100,
